--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,10 @@ android {
 
     defaultConfig {
         applicationId "com.mc.nad"
-        minSdkVersion 9
+        minSdkVersion 14
         targetSdkVersion 24
-        versionCode 59100
-        versionName "5.9.1"
+        versionCode 63000
+        versionName "6.3.0"
     }
     buildTypes {
         release {
@@ -23,6 +23,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    apt 'com.jakewharton:butterknife-compiler:8.2.1'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.4'
+    compile(group: 'com.tumblr', name: 'remember', version: '1.0.0', ext: 'aar')
+
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
     compile 'com.chocoyo.labs:splash:0.0.2'
